force-app/main/default/objects/Appointment_RecordType_mtd__c/Appointment_RecordType_mtd__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Appointment_RecordType_mtd</label>
</CustomObject>