force-app/main/default/objects/Appointment_RecordType_mtd__c/fields/Interest_Activate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Activate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Interest Activate</label>
    <type>Checkbox</type>
</CustomField>