force-app/main/default/objects/Appointment_RecordType_mtd__c/fields/Interest_Index__c.field-meta.xml
<CustomField>
    <fullName>Interest_Index__c</fullName>
    <label>Interest Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>