force-app/main/default/objects/Appointment_RecordType_mtd__c/fields/Interest_Name__c.field-meta.xml
<CustomField>
    <fullName>Interest_Name__c</fullName>
    <label>Interest Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>