force-app/main/default/objects/Appointment_RecordType_mtd__c/fields/isInterest__c.field-meta.xml
<CustomField>
    <fullName>isInterest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isInterest</label>
    <type>Checkbox</type>
</CustomField>