force-app/main/default/objects/Appointment_RecordType_mtd__c/fields/PartnerId__c.field-meta.xml
<CustomField>
    <fullName>PartnerId__c</fullName>
    <label>PartnerId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>