force-app/main/default/objects/Appointment_RecordType_mtd__c/fields/RT_Home_Service_Id__c.field-meta.xml
<CustomField>
    <fullName>RT_Home_Service_Id__c</fullName>
    <label>RT_Home_Service_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>