force-app/main/default/objects/Appointment_RecordType_mtd__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Recordtype for three types of setting  : Appointment, HomeService, Interest.</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>